src/paths/snapshots/mandala__paths__path__path_tests__f32-2d-polygon-20.snap
---
source: src/paths/path.rs
expression: samples
---
[
    Vector2 {
        x: 43.30127,
        y: 25.0,
    },
    Vector2 {
        x: 33.456528,
        y: 37.15724,
    },
    Vector2 {
        x: 20.33683,
        y: 45.677273,
    },
    Vector2 {
        x: 5.226421,
        y: 49.726097,
    },
    Vector2 {
        x: -10.395587,
        y: 48.90738,
    },
    Vector2 {
        x: -25.000004,
        y: 43.30127,
    },
    Vector2 {
        x: -37.157246,
        y: 33.456524,
    },
    Vector2 {
        x: -45.67728,
        y: 20.336817,
    },
    Vector2 {
        x: -49.726097,
        y: 5.2264013,
    },
    Vector2 {
        x: -48.907375,
        y: -10.395613,
    },
    Vector2 {
        x: -43.30125,
        y: -25.00003,
    },
    Vector2 {
        x: -33.456497,
        y: -37.15727,
    },
    Vector2 {
        x: -20.336788,
        y: -45.67729,
    },
    Vector2 {
        x: -5.2263694,
        y: -49.7261,
    },
    Vector2 {
        x: 10.395644,
        y: -48.907368,
    },
    Vector2 {
        x: 25.000057,
        y: -43.301235,
    },
    Vector2 {
        x: 37.15729,
        y: -33.456474,
    },
    Vector2 {
        x: 45.677303,
        y: -20.33676,
    },
    Vector2 {
        x: 49.726105,
        y: -5.2263374,
    },
    Vector2 {
        x: 48.907364,
        y: 10.395666,
    },
    Vector2 {
        x: 43.30127,
        y: 25.0,
    },
]
