src/paths/snapshots/mandala__paths__path__path_tests__f32-2d-polygon-5.snap
---
source: src/paths/path.rs
expression: samples
---
[
    Vector2 {
        x: 43.30127,
        y: 25.0,
    },
    Vector2 {
        x: -10.395587,
        y: 48.90738,
    },
    Vector2 {
        x: -49.726097,
        y: 5.2264247,
    },
    Vector2 {
        x: -20.336832,
        y: -45.677273,
    },
    Vector2 {
        x: 37.15724,
        y: -33.456528,
    },
    Vector2 {
        x: 43.30127,
        y: 25.0,
    },
]
