src/paths/snapshots/mandala__paths__path__path_tests__f32-2d-polygon-6.snap
---
source: src/paths/path.rs
expression: samples
---
[
    Vector2 {
        x: 43.30127,
        y: 25.0,
    },
    Vector2 {
        x: -2.1855694e-6,
        y: 50.0,
    },
    Vector2 {
        x: -43.30127,
        y: 25.000004,
    },
    Vector2 {
        x: -43.30127,
        y: -24.999998,
    },
    Vector2 {
        x: 5.9624404e-7,
        y: -50.0,
    },
    Vector2 {
        x: 43.301266,
        y: -25.00001,
    },
    Vector2 {
        x: 43.30127,
        y: 25.0,
    },
]
