src/paths/snapshots/mandala__paths__path__path_tests__f32-2d-polygon-7.snap
---
source: src/paths/path.rs
expression: samples
---
[
    Vector2 {
        x: 43.30127,
        y: 25.0,
    },
    Vector2 {
        x: 7.452112,
        y: 49.44154,
    },
    Vector2 {
        x: -34.008644,
        y: 36.652588,
    },
    Vector2 {
        x: -49.860188,
        y: -3.7365067,
    },
    Vector2 {
        x: -28.166004,
        y: -41.31194,
    },
    Vector2 {
        x: 14.737751,
        y: -47.77864,
    },
    Vector2 {
        x: 46.543682,
        y: -18.267065,
    },
    Vector2 {
        x: 43.30127,
        y: 25.0,
    },
]
