src/paths/snapshots/mandala__paths__path__path_tests__f32-2d-polygon-8.snap
---
source: src/paths/path.rs
expression: samples
---
[
    Vector2 {
        x: 43.30127,
        y: 25.0,
    },
    Vector2 {
        x: 12.940953,
        y: 48.29629,
    },
    Vector2 {
        x: -25.000004,
        y: 43.30127,
    },
    Vector2 {
        x: -48.296295,
        y: 12.940947,
    },
    Vector2 {
        x: -43.30126,
        y: -25.00001,
    },
    Vector2 {
        x: -12.940949,
        y: -48.296295,
    },
    Vector2 {
        x: 24.999996,
        y: -43.301273,
    },
    Vector2 {
        x: 48.296288,
        y: -12.940964,
    },
    Vector2 {
        x: 43.30127,
        y: 25.0,
    },
]
