src/paths/snapshots/mandala__paths__path__path_tests__f32-2d-polygon-9.snap
---
source: src/paths/path.rs
expression: samples
---
[
    Vector2 {
        x: 43.30127,
        y: 25.0,
    },
    Vector2 {
        x: 17.101007,
        y: 46.98463,
    },
    Vector2 {
        x: -17.101011,
        y: 46.98463,
    },
    Vector2 {
        x: -43.301277,
        y: 24.99999,
    },
    Vector2 {
        x: -49.240387,
        y: -8.682423,
    },
    Vector2 {
        x: -32.139378,
        y: -38.302227,
    },
    Vector2 {
        x: 5.9624404e-7,
        y: -50.0,
    },
    Vector2 {
        x: 32.139378,
        y: -38.302223,
    },
    Vector2 {
        x: 49.240387,
        y: -8.682423,
    },
    Vector2 {
        x: 43.30127,
        y: 25.0,
    },
]
