src/paths/snapshots/mandala__paths__path__path_tests__f32-2d-rectangle.snap
---
source: src/paths/path.rs
expression: samples
---
[
    Vector2 {
        x: 0.0,
        y: 0.0,
    },
    Vector2 {
        x: 1.0,
        y: 0.0,
    },
    Vector2 {
        x: 1.0,
        y: 1.0,
    },
    Vector2 {
        x: 0.0,
        y: 1.0,
    },
    Vector2 {
        x: 0.0,
        y: 0.0,
    },
]
