src/paths/snapshots/mandala__paths__path__path_tests__f32-3d-path-optimal.snap
---
source: src/paths/path.rs
expression: samples
---
[
    Vector3 {
        x: 0.0,
        y: 0.0,
        z: 0.0,
    },
    Vector3 {
        x: 1.0,
        y: 1.0,
        z: 0.0,
    },
    Vector3 {
        x: 2.0,
        y: 2.0,
        z: 0.0,
    },
]
