src/paths/snapshots/mandala__paths__path__path_tests__f32-3d-polygon-10.snap
---
source: src/paths/path.rs
expression: samples
---
[
    Vector3 {
        x: 43.30127,
        y: 25.0,
        z: 0.0,
    },
    Vector3 {
        x: 20.33683,
        y: 45.677273,
        z: 0.0,
    },
    Vector3 {
        x: -10.395587,
        y: 48.90738,
        z: 0.0,
    },
    Vector3 {
        x: -37.157246,
        y: 33.456524,
        z: 0.0,
    },
    Vector3 {
        x: -49.726097,
        y: 5.2264132,
        z: 0.0,
    },
    Vector3 {
        x: -43.30126,
        y: -25.00001,
        z: 0.0,
    },
    Vector3 {
        x: -20.33681,
        y: -45.677284,
        z: 0.0,
    },
    Vector3 {
        x: 10.39562,
        y: -48.90737,
        z: 0.0,
    },
    Vector3 {
        x: 37.157272,
        y: -33.456493,
        z: 0.0,
    },
    Vector3 {
        x: 49.7261,
        y: -5.2263613,
        z: 0.0,
    },
    Vector3 {
        x: 43.30127,
        y: 25.0,
        z: 0.0,
    },
]
